14컬렉션이름 보강

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
     <!-- 페이지 헤더 -->
-    <h1><span class="emoji">💼</span>중간계 마가비책 GPTs 컬렉션</h1>
+    <h1><span class="emoji">💼</span>중간계 마가비책 GPTs 14컬렉션</h1>
     <p class="subtitle">자영업 사장님들을 위한 스마트 도구 모음</p>
 
     <!-- GPT 목록 시작 -->
