--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 </head>
 <body>
     <!-- 페이지 헤더 -->
-    <h1><span class="emoji">💼</span>중간계 마가비책 GPTs 14컬렉션</h1>
+    <h1><span class="emoji">💼</span>중간계 30기 마가비책 GPTs 컬렉션</h1>
     <p class="subtitle">자영업 사장님들을 위한 스마트 도구 모음</p>
 
     <!-- GPT 목록 시작 -->
@@ -135,6 +135,20 @@
                 <div class="gpt-title">
                     <span class="number">2.</span>
                     <span class="emoji">📊</span>
+                    신제품 성공확율 진단기 Ver 1.0
+                </div>
+                <p class="gpt-description">귀하의 신제품 성공율을 AI와 함께 진단합니다.</p>
+            </div>
+            <a href="https://chatgpt.com/g/g-681406edf2f081919f9cab5f9c6a31d9-sinjepum-seonggonghwagyul-jindangi" class="action-button">
+                👉 실행하기
+            </a>
+        </div>
+
+        <div class="gpt-item">
+            <div class="gpt-content">
+                <div class="gpt-title">
+                    <span class="number">3.</span>
+                    <span class="emoji">📊</span>
                     소비자 선택 시뮬레이션 분석기 Ver 1.0
                 </div>
                 <p class="gpt-description">Multinomial Logit 모형 기반 소비자 선택율을 추정합니다.</p>
@@ -147,7 +161,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">3.</span>
+                    <span class="number">4.</span>
                     <span class="emoji">🎨</span>
                     중간계 프롬프트 생성기
                 </div>
@@ -161,7 +175,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">4.</span>
+                    <span class="number">5.</span>
                     <span class="emoji">✍️</span>
                     중간계 SEO 기반 블로그 글쓰기
                 </div>
@@ -175,7 +189,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">5.</span>
+                    <span class="number">6.</span>
                     <span class="emoji">💫</span>
                     신제품 아이디어 생성기
                 </div>
@@ -189,7 +203,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">6.</span>
+                    <span class="number">7.</span>
                     <span class="emoji">💭</span>
                     브랜드 Name 생성기
                 </div>
@@ -203,7 +217,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">7.</span>
+                    <span class="number">8.</span>
                     <span class="emoji">🎨</span>
                     브랜드 컨셉트 생성기
                 </div>
@@ -217,7 +231,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">8.</span>
+                    <span class="number">9.</span>
                     <span class="emoji">📖</span>
                     브랜드 스토리 생성기
                 </div>
@@ -231,7 +245,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">9.</span>
+                    <span class="number">10.</span>
                     <span class="emoji">🎯</span>
                     브랜드 LOGO 생성기
                 </div>
@@ -245,7 +259,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">10.</span>
+                    <span class="number">11.</span>
                     <span class="emoji">🎬</span>
                     중간계 쇼츠 스크립트 생성기
                 </div>
@@ -259,7 +273,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">11.</span>
+                    <span class="number">12.</span>
                     <span class="emoji">📝</span>
                     유튜브 더보기 글 생성기
                 </div>
@@ -273,7 +287,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">12.</span>
+                    <span class="number">13.</span>
                     <span class="emoji">🎯</span>
                     중간계 이벤트 생성기
                 </div>
@@ -287,7 +301,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">13.</span>
+                    <span class="number">14.</span>
                     <span class="emoji">👥</span>
                     직원문제 상담 마법사
                 </div>
@@ -301,7 +315,7 @@
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">14.</span>
+                    <span class="number">15.</span>
                     <span class="emoji">🗣️</span>
                     리더십 대화 시뮬레이터
                 </div>
