빅데이터 추가

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
     <!-- GPT 목록 시작 -->
     <div class="gpt-list">
+        <!-- 중간계 SEO 키워드 탐색기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
@@ -123,111 +124,119 @@
                     <span class="emoji">🔍</span>
                     중간계 SEO 키워드 탐색기
                 </div>
-                <p class="gpt-description">황금키워드를 4단계 설명으로 도출합니다.</p>
+                <p class="gpt-description">황금키워드 4단계 접근</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fc5e2cb8e481918f7af26df91186cc-junggangye-seo-kiweodeu-tamsaeggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 중간계 프롬프트생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">2.</span>
-                    <span class="emoji">📊</span>
-                    신제품 성공확율 진단기 Ver 1.0
-                </div>
-                <p class="gpt-description">귀하의 신제품 성공율을 AI와 함께 진단합니다.</p>
-            </div>
-            <a href="https://chatgpt.com/g/g-681406edf2f081919f9cab5f9c6a31d9-sinjepum-seonggonghwagyul-jindangi" class="action-button">
-                👉 실행하기
-            </a>
-        </div>
-
-        <div class="gpt-item">
-            <div class="gpt-content">
-                <div class="gpt-title">
-                    <span class="number">3.</span>
-                    <span class="emoji">📊</span>
-                    소비자 선택 시뮬레이션 분석기 Ver 1.0
-                </div>
-                <p class="gpt-description">Multinomial Logit 모형 기반 소비자 선택율을 추정합니다.</p>
-            </div>
-            <a href="https://chatgpt.com/g/g-680a5059bab08191a24f7d26f797af1b-sobija-seontaeg-simyulreisyeon-bunseoggi-ver-1-0" class="action-button">
-                👉 실행하기
-            </a>
-        </div>
-
-        <div class="gpt-item">
-            <div class="gpt-content">
-                <div class="gpt-title">
-                    <span class="number">4.</span>
                     <span class="emoji">🎨</span>
-                    중간계 프롬프트 생성기
+                    중간계 프롬프트생성기
                 </div>
-                <p class="gpt-description">마케팅 이미지 생성에 최적화된 프롬프트를 생성합니다.</p>
+                <p class="gpt-description">마케팅 이미지 생성에 맞게 프롬프트 생성하기</p>
             </div>
             <a href="https://chatgpt.com/g/g-67c0f60a67b48191b5d4a40b56dfcb42-junggangye-peurompeuteusaengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 빅데이터 기반, 신제품(시장) 탐색기 -->
+        <div class="gpt-item">
+            <div class="gpt-content">
+                <div class="gpt-title">
+                    <span class="number">3.</span>
+                    <span class="emoji">📊</span>
+                    빅데이터 기반, 신제품(시장) 탐색기
+                </div>
+                <p class="gpt-description">빅데이터 기반 시장기회 발굴 GPT</p>
+            </div>
+            <a href="https://chatgpt.com/g/g-681462da10708191854a025716207335-bigdeiteo-giban-sinjepum-sijang-tamsaeggi" class="action-button">
+                👉 실행하기
+            </a>
+        </div>
+
+        <!-- 신제품 성공확율 진단기 -->
+        <div class="gpt-item">
+            <div class="gpt-content">
+                <div class="gpt-title">
+                    <span class="number">4.</span>
+                    <span class="emoji">📈</span>
+                    신제품 성공확율 진단기 Ver 1.0
+                </div>
+                <p class="gpt-description">귀하의 신제품 성공율을 AI와 함께 진단합니다</p>
+            </div>
+            <a href="https://chatgpt.com/g/g-681406edf2f081919f9cab5f9c6a31d9-sinjepum-seonggonghwagyul-jindangi" class="action-button">
+                👉 실행하기
+            </a>
+        </div>
+
+        <!-- 소비자 선택 시뮬레이션 분석기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">5.</span>
+                    <span class="emoji">📊</span>
+                    소비자 선택 시뮬레이션 분석기 Ver 1.0
+                </div>
+                <p class="gpt-description">Multinomial Logit 모형기반 소비자 선택율 추정</p>
+            </div>
+            <a href="https://chatgpt.com/g/g-680a5059bab08191a24f7d26f797af1b-sobija-seontaeg-simyulreisyeon-bunseoggi-ver-1-0" class="action-button">
+                👉 실행하기
+            </a>
+        </div>
+
+        <!-- 중간계 SEO 기반 블로그 글쓰기 -->
+        <div class="gpt-item">
+            <div class="gpt-content">
+                <div class="gpt-title">
+                    <span class="number">6.</span>
                     <span class="emoji">✍️</span>
                     중간계 SEO 기반 블로그 글쓰기
                 </div>
-                <p class="gpt-description">SEO에 최적화된 블로그 콘텐츠를 작성합니다.</p>
+                <p class="gpt-description">SEO 기반의 블로그 글쓰기</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fc5daff01c8191a997fda8a023ccc5-junggangye-seo-giban-beulrogeu-geulsseugi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
-        <div class="gpt-item">
-            <div class="gpt-content">
-                <div class="gpt-title">
-                    <span class="number">6.</span>
-                    <span class="emoji">💫</span>
-                    신제품 아이디어 생성기
-                </div>
-                <p class="gpt-description">문제해결 중심의 혁신적 제품 아이디어를 개발합니다.</p>
-            </div>
-            <a href="https://chatgpt.com/g/g-67fd9109ed9c8191a6953c59e3509d94-sinjepum-aidieo-saengseonggi" class="action-button">
-                👉 실행하기
-            </a>
-        </div>
-
+        <!-- 중간계 브랜드 Name 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">7.</span>
                     <span class="emoji">💭</span>
-                    브랜드 Name 생성기
+                    중간계 브랜드 Name 생성기
                 </div>
-                <p class="gpt-description">매력적이고 기억에 남는 브랜드명을 생성합니다.</p>
+                <p class="gpt-description">철학적, 직관적, 감각적, 브랜드 Name</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fc5c0ff3f88191889f9cb365557720-junggangye-beuraendeu-name-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 브랜드컨셉트 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">8.</span>
                     <span class="emoji">🎨</span>
-                    브랜드 컨셉트 생성기
+                    브랜드컨셉트 생성기
                 </div>
-                <p class="gpt-description">브랜드의 핵심 방향과 메시지를 자동으로 제안해드립니다.</p>
+                <p class="gpt-description">Unique Brand Concept 생성</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fd95e12278819195f68f7922d3f35d-beuraendeukeonsebteu-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 브랜드 스토리 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
@@ -235,27 +244,29 @@
                     <span class="emoji">📖</span>
                     브랜드 스토리 생성기
                 </div>
-                <p class="gpt-description">브랜드 탄생과 고객 연결 스토리를 감성적으로 만들어드립니다.</p>
+                <p class="gpt-description">브랜드 탄생, 고객에 연결된 스토리를 생성해드립니다</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fd93d4d944819184174585353cd18d-beuraendeu-seutori-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 중간계 LOGO 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">10.</span>
                     <span class="emoji">🎯</span>
-                    브랜드 LOGO 생성기
+                    중간계 LOGO 생성기
                 </div>
-                <p class="gpt-description">로고 디자인 아이디어를 빠르게 도출할 수 있습니다.</p>
+                <p class="gpt-description">비즈니스 로고디자인 작업 직접지원합니다</p>
             </div>
-            <a href="https://chatgpt.com/g/g-67fc5d4435408191bcda23223b34e5db-junggangye-logo-saengseonggi" class="action-button">
+            <a href="https://chatgpt.com/g/g-67c8fb46cc1081919dc73251b5e0a5d2-junggangye-ibenteu-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 중간계 쇼츠 스크립트 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
@@ -263,13 +274,14 @@
                     <span class="emoji">🎬</span>
                     중간계 쇼츠 스크립트 생성기
                 </div>
-                <p class="gpt-description">브랜드 쇼츠, 릴스 전용 스크립트를 작성합니다.</p>
+                <p class="gpt-description">브랜드 쇼츠, 릴스 스크립트 전용 GPT 모델</p>
             </div>
             <a href="https://chatgpt.com/g/g-67fc5d4435408191bcda23223b34e5db-junggangye-syoceu-seukeuribteu-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 유튜브 더보기 글 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
@@ -277,49 +289,67 @@
                     <span class="emoji">📝</span>
                     유튜브 더보기 글 생성기
                 </div>
-                <p class="gpt-description">황금키워드 기반 유튜브 설명글을 작성합니다.</p>
+                <p class="gpt-description">황금키워드 기반, 유튜브 더보기글 생성</p>
             </div>
             <a href="https://chatgpt.com/g/g-6809861049348191a4daf53efe8a7e82-yutyubeu-deobogi-geul-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 신제품 아이디어 생성기 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">13.</span>
+                    <span class="emoji">💫</span>
+                    신제품 아이디어 생성기
+                </div>
+                <p class="gpt-description">문제해결 신제품 아이디어 탐색</p>
+            </div>
+            <a href="https://chatgpt.com/g/g-67fd9109ed9c8191a6953c59e3509d94-sinjepum-aidieo-saengseonggi" class="action-button">
+                👉 실행하기
+            </a>
+        </div>
+
+        <!-- 중간계 이벤트 생성기 -->
+        <div class="gpt-item">
+            <div class="gpt-content">
+                <div class="gpt-title">
+                    <span class="number">14.</span>
                     <span class="emoji">🎯</span>
                     중간계 이벤트 생성기
                 </div>
-                <p class="gpt-description">소상공인을 위한 연간 이벤트와 프로모션 설계를 지원합니다.</p>
+                <p class="gpt-description">소상공인에게 필요한 연간 이벤트 설계</p>
             </div>
             <a href="https://chatgpt.com/g/g-67c8fb46cc1081919dc73251b5e0a5d2-junggangye-ibenteu-saengseonggi" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 직원문제 상담 마법사 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">14.</span>
+                    <span class="number">15.</span>
                     <span class="emoji">👥</span>
                     직원문제 상담 마법사
                 </div>
-                <p class="gpt-description">직원, 조직, 리더십 관련 전문 상담을 제공합니다.</p>
+                <p class="gpt-description">직원문제, 조직문제, 리더십 상담 마법사</p>
             </div>
             <a href="https://chatgpt.com/g/g-6802e5fa861081919f1a842cfbfae06a-jigweonmunje-sangdam-mabeobsa" class="action-button">
                 👉 실행하기
             </a>
         </div>
 
+        <!-- 리더십 대화 시뮬레이터 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
-                    <span class="number">15.</span>
+                    <span class="number">16.</span>
                     <span class="emoji">🗣️</span>
                     리더십 대화 시뮬레이터
                 </div>
-                <p class="gpt-description">직원과의 효과적인 대화 스킬을 향상시킵니다.</p>
+                <p class="gpt-description">직원과의 대화 스킬을 레벨업 지원</p>
             </div>
             <a href="https://chatgpt.com/g/g-6809e8c4b2208191829c8d7b28b15f5c-rideosib-daehwa-simyulreiteo" class="action-button">
                 👉 실행하기
