빅데이터 이름 수정

--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@
             </a>
         </div>
 
-        <!-- 빅데이터 기반, 신제품(시장) 탐색기 -->
+        <!-- 빅데이터 분석기 Ver 1.0 -->
         <div class="gpt-item">
             <div class="gpt-content">
                 <div class="gpt-title">
                     <span class="number">3.</span>
                     <span class="emoji">📊</span>
-                    빅데이터 기반, 신제품(시장) 탐색기
+                    빅데이터 분석기 (사업가용) Ver 1.0
                 </div>
-                <p class="gpt-description">빅데이터 기반 시장기회 발굴 GPT</p>
+                <p class="gpt-description">빅데이터 기반 신제품, 시장 기회 탐색</p>
             </div>
             <a href="https://chatgpt.com/g/g-681462da10708191854a025716207335-bigdeiteo-giban-sinjepum-sijang-tamsaeggi" class="action-button">
                 👉 실행하기
